<resources>
    <string name="app_name">SignUp</string>
    <string name="sign_up_with_apple">Sign up with Apple</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="welcome">Welcome to App!</string>
    <string name="sign_up_with_sms">Sign up with SMS</string>
    <string name="or">OR</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
</resources>